# SPDX-FileCopyrightText: 2024 Mika Tammi
#
# SPDX-License-Identifier: MIT

[package]
name = "rodvk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
vulkano = "0.34.0"
winit = { version = "0.29.10", features = ["rwh_05"] }

[profile.dev]
opt-level = 1
